# ansible-role-tripleo-inventory

./: .gitreview  README.md  groups  project.config  setup.cfg
defaults/: main.yml
handlers/: main.yml
tasks/: main.yml
templates/: get-overcloud-nodes.py.j2  inventory.j2  ssh_config.j2  ssh_config_localhost.j2  ssh_config_no_undercloud.j2
tests/: test.yml
vars/: main.yml
