[metadata]
name = ansible-role-tripleo-inventory
summary = ansible-role-tripleo-inventory - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-inventory
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/defaults = ../ansible-role-tripleo-inventory/defaults/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/handlers = ../ansible-role-tripleo-inventory/handlers/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/meta = ../ansible-role-tripleo-inventory/meta/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/tasks = ../ansible-role-tripleo-inventory/tasks/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/templates = ../ansible-role-tripleo-inventory/templates/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/files = ../ansible-role-tripleo-inventory/files/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/tests = ../ansible-role-tripleo-inventory/tests/*
    usr/local/share/tripleo-quickstart/roles/tripleo-inventory/vars = ../ansible-role-tripleo-inventory/vars/*
    tripleo-quickstart/playbooks = tests/playbooks/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
