[metadata]
name = ansible-role-tripleo-inventory
summary = ansible-role-tripleo-inventory - A ansible role for deploying a tripleo overcloud
description-file =
    README.md
author = RDO-CI Team
author-email = mbultel@redhat.com, whayutin@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-inventory
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    playbooks = tests/playbooks/*
    usr/local/share/ansible/roles/tripleo-inventory/defaults = defaults/*
    usr/local/share/ansible/roles/tripleo-inventory/handlers = handlers/*
    usr/local/share/ansible/roles/tripleo-inventory/meta = meta/*
    usr/local/share/ansible/roles/tripleo-inventory/tasks = tasks/*
    usr/local/share/ansible/roles/tripleo-inventory/templates = templates/*
    usr/local/share/ansible/roles/tripleo-inventory/files = files/*
    usr/local/share/ansible/roles/tripleo-inventory/tests = tests/*
    usr/local/share/ansible/roles/tripleo-inventory/vars = vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
